--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- <p>Todo List</p>
+  <p>Todo List</p>
   <div class="todo-input-grid">
     <input placeholder="Todo name" class="js-input name-input">
     <input type="date" class="js-due-date-input due-date-input">
@@ -15,10 +15,6 @@
   </div>
   
   <div class="js-todo-list todo-grid"></div>
-  <script src="index.js"></script> -->
-
-
-  <h1 id="test">Testing Javascript</h1>
-  <script src="testing.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
